--- a/index.html
+++ b/index.html
@@ -7,25 +7,33 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Basic-Portfolio</title>
 </head>
-<body>
+<body> 
     <header>
-        <h1>Paul Panchukov</h1>
-        <nav>
-            <ul>
-                <li> <a href="#">About</a></li>
-                <li><a href="#">Porfolio</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+        <div id="container">        
+            <h1 id="name">Paul Panchukov</h1>
+            <nav>
+                <ul>
+                    <li class="li"><a href="../Basic-Portfolio/index.html">About</a></li>
+                    <li class="li"><a href="../Basic-Portfolio/portfolio.html">Porfolio</a></li>
+                    <li><a href="../Basic-Portfolio/contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>    
     </header>
 
-    <section id="main">
-        <h2>About me</h2>
-             <hr>
+    <section id="content">
+        <div  id="main">
+        <h2>About Me</h2>
         <img id="profile_photo" src="assets/images/myportrait.png" alt="Paul's face">
              <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </p>
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+             </p>
+             <p>
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+             </p>
+        </div>
     </section>
     <footer>
         Copyright &copy;
