--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body> 
     <header>
         <div id="container">        
-            <h1 id="name">Paul Panchukov</h1>
+            <h1 id="header_name">Paul Panchukov</h1>
             <nav>
                 <ul>
                     <li class="li"><a href="../Basic-Portfolio/index.html">About</a></li>
@@ -22,23 +22,21 @@
     </header>
 
     <section id="content">
-        <div  id="main">
+        <div id="content-wrap">
             <h2>Contact</h2>
             <form action="#">
-                <div id="Name">Name</div>
+                <div id="name">Name</div>
                 <input type="text" name="Name" value="James Bond">
                 <div id="email">Email</div>
                 <input type="text" name="email" value="example@gmail.com">
                 <div id="msg">Message</div>
                 <textarea></textarea><br>
                 <input id="submit" type="button" value="Submit">
-
             </form>
-    
         </div>
-    </section>
     <footer>
         Copyright &copy;
     </footer>
+</section>
 </body>
 </html>
