--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 <body> 
     <header>
         <div id="container">        
-            <h1 id="name">Paul Panchukov</h1>
+            <h1 id="header_name">Paul Panchukov</h1>
             <nav>
                 <ul>
                     <li class="li"><a href="../Basic-Portfolio/index.html">About</a></li>
@@ -22,12 +22,25 @@
     </header>
 
     <section id="content">
-        <div  id="main">
+        <div id="content-wrap">
             <h2>Porfolio</h2>
+            <table>
+                <tr>
+                    <td><a href="portfolio.html" class="img_wrap"><img class="portfolio_img" src="assets/images/technics-q-c-640-480-1.jpg" alt=""><span class="link_name">Hangman</span></a></td>
+                    <td><a href="portfolio.html"  class="img_wrap"><img class="portfolio_img" src="assets/images/technics-q-c-640-480-2.jpg" alt=""><span class="link_name">RPG Game</span></a></td>
+                </tr>
+                <tr>
+                    <td><a href="portfolio.html" class="img_wrap"><img class="portfolio_img" src="assets/images/technics-q-c-640-480-10.jpg" alt=""><span class="link_name">Trivia Game</span></a></td>
+                    <td><a href="portfolio.html" class="img_wrap"><img class="portfolio_img" src="assets/images/technics-q-c-640-480-6.jpg" alt=""><span class="link_name">Rutgers Info Widget</span></a></td>
+                </tr>
+                <tr> 
+                    <td><a href="portfolio.html" class="img_wrap"><img class="portfolio_img" src="assets/images/technics-q-c-640-480-4.jpg" alt=""><span class="link_name">Rock Paper Scissors</span></a></td>
+                </tr>
+            </table>
         </div>
-    </section>
     <footer>
         Copyright &copy;
     </footer>
+</section>
 </body>
 </html>
