replaced value with placeholder

--- a/contact.html
+++ b/contact.html
@@ -26,17 +26,18 @@
             <h2>Contact</h2>
             <form action="#">
                 <div id="name">Name</div>
-                <input type="text" name="Name" value="James Bond">
+                <input type="text" name="Name" placeholder="John Smith">
                 <div id="email">Email</div>
-                <input type="text" name="email" value="example@gmail.com">
+                <input type="text" name="email" placeholder="example@gmail.com">
                 <div id="msg">Message</div>
                 <textarea></textarea><br>
                 <input id="submit" type="button" value="Submit">
             </form>
         </div>
+    </section>    
     <footer>
         Copyright &copy;
     </footer>
-</section>
+
 </body>
 </html>
