updated with reset.css

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +27,7 @@
             <h2>Contact</h2>
             <form action="#">
                 <div id="name">Name</div>
-                <input type="text" name="Name" placeholder="John Smith">
+                <input type="text" name="name" placeholder="John Smith">
                 <div id="email">Email</div>
                 <input type="text" name="email" placeholder="example@gmail.com">
                 <div id="msg">Message</div>
